std::bind -> operator

--- a/ODE_practice/CMakeLists.txt
+++ b/ODE_practice/CMakeLists.txt
@@ -1,11 +1,10 @@
 cmake_minimum_required(VERSION 2.8.11)
 project(ode_test)
 
-find_package(Eigen3 3.3.7 REQUIRED NO_MODULE)
 
 include_directories(
     INCLUDE_DIRS include
 )
 
 add_executable(rk4_main src/main.cpp include/rk4.cpp)
-target_link_libraries(rk4_main Eigen3::Eigen)
+target_link_libraries(rk4_main)
